src/gutscript/y.output

state 0
	$accept: .start $end 
	top_statement_list: .    (4)

	.  reduce 4 (src line 103)

	start  goto 1
	top_statement_list  goto 2

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  top_statement_list.    (1)
	top_statement_list:  top_statement_list.$$2 top_statement 
	$$2: .    (2)

	$end  reduce 1 (src line 99)
	.  reduce 2 (src line 101)

	$$2  goto 3

state 3
	top_statement_list:  top_statement_list $$2.top_statement 

	T_LETTER  shift 12
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 8
	number  goto 13
	top_statement  goto 4
	statement  goto 5
	unticked_statement  goto 6
	assign_statement  goto 7
	identity  goto 9

state 4
	top_statement_list:  top_statement_list $$2 top_statement.    (3)

	.  reduce 3 (src line 102)


state 5
	top_statement:  statement.    (5)

	.  reduce 5 (src line 106)


state 6
	statement:  unticked_statement.    (6)

	.  reduce 6 (src line 110)


state 7
	statement:  assign_statement.    (7)

	.  reduce 7 (src line 112)


state 8
	unticked_statement:  expr.; 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 

	|  shift 22
	&  shift 21
	+  shift 16
	-  shift 17
	*  shift 18
	/  shift 19
	%  shift 20
	;  shift 15
	.  error


state 9
	assign_statement:  identity.= expr ; 
	assign_statement:  identity.= function_call ; 

	=  shift 23
	.  error


state 10
	expr:  (.expr ) 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 24
	number  goto 13

state 11
	expr:  -.expr 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 26
	number  goto 13

state 12
	expr:  T_LETTER.    (23)
	identity:  T_LETTER.    (25)
	identity:  T_LETTER.T_DIGIT 

	T_DIGIT  shift 27
	=  reduce 25 (src line 174)
	(  reduce 25 (src line 174)
	.  reduce 23 (src line 166)


state 13
	expr:  number.    (24)

	.  reduce 24 (src line 170)


state 14
	number:  T_NUMBER.    (27)

	.  reduce 27 (src line 181)


state 15
	unticked_statement:  expr ;.    (8)

	.  reduce 8 (src line 115)


state 16
	expr:  expr +.expr 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 28
	number  goto 13

state 17
	expr:  expr -.expr 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 29
	number  goto 13

state 18
	expr:  expr *.expr 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 30
	number  goto 13

state 19
	expr:  expr /.expr 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 31
	number  goto 13

state 20
	expr:  expr %.expr 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 32
	number  goto 13

state 21
	expr:  expr &.expr 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 33
	number  goto 13

state 22
	expr:  expr |.expr 

	T_LETTER  shift 25
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 34
	number  goto 13

state 23
	assign_statement:  identity =.expr ; 
	assign_statement:  identity =.function_call ; 

	T_LETTER  shift 12
	T_NUMBER  shift 14
	-  shift 11
	(  shift 10
	.  error

	expr  goto 35
	number  goto 13
	identity  goto 37
	function_call  goto 36

state 24
	expr:  ( expr.) 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 

	|  shift 22
	&  shift 21
	+  shift 16
	-  shift 17
	*  shift 18
	/  shift 19
	%  shift 20
	)  shift 38
	.  error


state 25
	expr:  T_LETTER.    (23)

	.  reduce 23 (src line 166)


state 26
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  - expr.    (22)

	.  reduce 22 (src line 162)


state 27
	identity:  T_LETTER T_DIGIT.    (26)

	.  reduce 26 (src line 175)


state 28
	expr:  expr.+ expr 
	expr:  expr + expr.    (15)
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 

	*  shift 18
	/  shift 19
	%  shift 20
	.  reduce 15 (src line 134)


state 29
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr - expr.    (16)
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 

	*  shift 18
	/  shift 19
	%  shift 20
	.  reduce 16 (src line 138)


state 30
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr * expr.    (17)
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 

	.  reduce 17 (src line 142)


state 31
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr / expr.    (18)
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 

	.  reduce 18 (src line 146)


state 32
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr % expr.    (19)
	expr:  expr.& expr 
	expr:  expr.| expr 

	.  reduce 19 (src line 150)


state 33
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr & expr.    (20)
	expr:  expr.| expr 

	+  shift 16
	-  shift 17
	*  shift 18
	/  shift 19
	%  shift 20
	.  reduce 20 (src line 154)


state 34
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr | expr.    (21)

	&  shift 21
	+  shift 16
	-  shift 17
	*  shift 18
	/  shift 19
	%  shift 20
	.  reduce 21 (src line 158)


state 35
	assign_statement:  identity = expr.; 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.& expr 
	expr:  expr.| expr 

	|  shift 22
	&  shift 21
	+  shift 16
	-  shift 17
	*  shift 18
	/  shift 19
	%  shift 20
	;  shift 39
	.  error


state 36
	assign_statement:  identity = function_call.; 

	;  shift 40
	.  error


state 37
	function_call:  identity.function_call_parameter_list 

	(  shift 42
	.  error

	function_call_parameter_list  goto 41

state 38
	expr:  ( expr ).    (14)

	.  reduce 14 (src line 132)


state 39
	assign_statement:  identity = expr ;.    (9)

	.  reduce 9 (src line 119)


state 40
	assign_statement:  identity = function_call ;.    (10)

	.  reduce 10 (src line 121)


state 41
	function_call:  identity function_call_parameter_list.    (29)

	.  reduce 29 (src line 199)


state 42
	function_call_parameter_list:  (.) 

	)  shift 43
	.  error


state 43
	function_call_parameter_list:  ( ).    (28)

	.  reduce 28 (src line 195)

Rule not reduced: function_parameter_list:  ( ) 
Rule not reduced: function:  identity T_FUNCTION_PROTOTYPE function_parameter_list -> function_body 
Rule not reduced: function_body:  top_statement_list 

70 terminals, 16 nonterminals
30 grammar rules, 44/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
65 working sets used
memory: parser 39/30000
19 extra closures
90 shift entries, 4 exceptions
26 goto entries
7 entries saved by goto default
Optimizer space used: output 97/30000
97 table entries, 23 zero
maximum spread: 69, maximum offset: 69
